--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ h6 {
     justify-content: space-evenly;
 }
 
-#startGame,#startRound,#endGame {
+#startGame,#startRound,#endGame,#confirmButton {
     /* position: absolute; */
     padding: 10px 20px 10px;
     background: rgb(25, 111, 182);
@@ -76,12 +76,12 @@ h6 {
     margin-left: 15px;
 }
 
-#startGame:hover,#startRound:hover,#endGame:hover {
+#startGame:hover,#startRound:hover,#endGame:hover,#confirmButton:hover {
     background: rgb(31, 82, 190);
     border: 1px solid rgb(31, 82, 190);
 }
 
-#startGame:active,#startRound:active,#endGame:active {
+#startGame:active,#startRound:active,#endGame:active,#confirmButton:active {
     top: 11px;
     left: 1px;
 }
@@ -159,4 +159,30 @@ footer {
     font-size: 2.1rem;
     font-family: monospace;
     text-wrap: nowrap;
+}
+
+::backdrop {
+    background: rgb(244, 230, 255);
+    opacity: 0.6;
+}
+
+dialog {
+    background: rgb(255, 221, 190);
+    border: 10px ridge rgb(231, 174, 130);
+    border-radius: 15px;
+    position: absolute;
+    padding: 10px;
+}
+
+dialog > div > div {
+    display: flex;
+}
+
+#winnerLabel {
+    font-size: 2rem;
+}
+
+#confirmButton {
+    font-size: 1rem;
+    margin-left: auto;
 }
